--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,40 @@
 .App {
+  width: 80%;
+  border: 1px solid red;
+  margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
+}
+
+.card {
+  border-radius: 20px;
+  padding: 10px;
+}
+
+.card .image {
+  /* background-image: url(./img/hero-program-blurr2.jpg); */
+	background-size: cover;
+	background-position: top center;
+	position: relative;
+	z-index: 1;
+}
+
+.card .image::after {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	background-color: black;
+	opacity: .55;
+	z-index: -1;
+}
+
+.card .image .image-text {
+	/* max-width: 1200px; */
+	display: flex;
+	justify-content: space-between;
 }
