--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,26 +1,3 @@
-.App {
-  width: 80%;
-  border: 1px solid red;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
-.card {
-  border-radius: 20px;
-  padding: 10px;
-}
-
-.card .image {
-  /* background-image: url(./img/hero-program-blurr2.jpg); */
-	background-size: cover;
-	background-position: top center;
-	position: relative;
-	z-index: 1;
-}
-
 .card .image::after {
 	content: '';
 	position: absolute;
@@ -31,10 +8,16 @@
 	background-color: black;
 	opacity: .55;
 	z-index: -1;
+	border-top-right-radius: 20px;
+	border-top-left-radius: 20px;
 }
 
-.card .image .image-text {
-	/* max-width: 1200px; */
+.create {
 	display: flex;
-	justify-content: space-between;
+	flex-direction: column;
+	background-color: #fff;
+	border: 1px solid red;
+	width: 250px;
+	padding: 20px;
+	margin: 15px;
 }
